--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -343,3 +343,16 @@ footer {
 .text-right {
   text-align: right;
 }
+
+.link-btn {
+  background: none;
+  border: none;
+  padding: 0;
+  color: #2563eb;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.link-btn:hover {
+  text-decoration: underline;
+}
